# learn-anthropic

./: .gitignore  README.md  pyproject.toml
(wip) RAG-contextual/: read.md
RAG/: rag.ipynb
RAG-contextual/: rag_notes.md
RAG/evaluation/csvs/: evaluation_results_detailed.csv  evaluation_results_detailed_level_three.csv  evaluation_results_detailed_level_two.csv
RAG/evaluation/json_results/: evaluation_results_level_three.json  evaluation_results_level_two.json  evaluation_results_one.json
chatbot/: app.py  chatbot.py  config.py  customer_service_agent.ipynb  plan_a_chatbot_use_case.md
chunking/: notes.md
ticket_routing/: ticket_routing.ipynb
tools/: customer_service.ipynb  mini_tools.ipynb
