[project]
name = "learn-anthropic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.42.0",
    "beautifulsoup4>=4.12.3",
    "cohere>=5.13.5",
    "elasticsearch>=8.17.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "ratelimit>=2.2.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "voyageai>=0.3.2",
]
